--- a/theme/css/statocles-default.css
+++ b/theme/css/statocles-default.css
@@ -74,15 +74,23 @@ main img {
     max-width: 100%;
 }
 
-footer .tagline {
+a[rel=external]::after {
+    content: '\f08e';
+    padding-left: 0.2em;
+    font-family: "FontAwesome";
+    display: inline-block;
     font-size: smaller;
-    line-height: 1.3;
-    text-align: right;
+    vertical-align: top;
 }
 
 /************************************************
  * Classes
  ************************************************/
+
+ol.bare, ul.bare {
+    list-style-type: none;
+    margin-left: 0;
+}
 
 ol.list-inline, ul.list-inline {
     margin: 0;
@@ -99,6 +107,16 @@ img.u-pull-left, img.u-pull-right {
 }
 
 /************************************************
+ * Grid
+ ************************************************/
+
+.column, .columns {
+    margin-left: 2%;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+
+/************************************************
  * Widgets
  ************************************************/
 
@@ -107,6 +125,7 @@ img.u-pull-left, img.u-pull-right {
     overflow: hidden;
     border-bottom: 1px solid #bbb;
     color: #777;
+    background-color: white;
     margin-bottom: 1em;
 }
 
@@ -158,6 +177,9 @@ img.u-pull-left, img.u-pull-right {
     font-size: 1em;
 }
 
+.sidebar {
+    font-size: 0.8em;
+}
 
 /** Pager widget */
 ul.pager {
@@ -170,6 +192,40 @@ ul.pager {
 
 .pager .next {
     float: right;
+}
+
+/** Footer */
+footer {
+    margin-top: 1em;
+    padding-bottom: 0.5em;
+    font-size: 0.7em;
+}
+
+footer .tagline {
+    font-size: smaller;
+    line-height: 1.3;
+    text-align: right;
+}
+
+/** Crumbtrail widget */
+
+.crumbtrail ul {
+    display: inline-block;
+    list-style: none;
+    margin: 0;
+}
+
+.crumbtrail li {
+    display: inline-block;
+}
+
+.crumbtrail li::before {
+    content: '::';
+    display: inline-block;
+}
+
+.crumbtrail li:first-child::before {
+    content: '';
 }
 
 /************************************************
